properly request assets

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link rel='stylesheet' href='style.css'>
 	</head>
 </html>
-<body>
+<body onload='init()'>
 	<header>
 		<h1>xkcd 2501 generator</h1>
 	</header>
@@ -47,7 +47,7 @@
 			<img src="https://marshdeer.github.io/root-faction-randomizer/assets/88x31.gif" alt="Root Faction Randomizer">
 		</a>
 		<a href="https://marshdeer.github.io/xkcd2501-generator" target="_blank">
-			<img src="/assets/88x51.gif" alt="xkcd 2501 generator">
+			<img src="assets/88x51.gif" alt="xkcd 2501 generator">
 		</a>
 	</footer>
 	<script src='script.js'></script>
