--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 		<section id='buttons'>
 			<button id='buttonCopy'>Copy to Clipboard</button>
 			<button id='buttonSave'>Save Image</button>
+      <select id='localeSelector'></select>
 		</section>
 	</main>
 	<footer>
